--- a/bggen/saxon-theme/static/css/style.css
+++ b/bggen/saxon-theme/static/css/style.css
@@ -1743,7 +1743,7 @@ sup[id^="fnref"]:hover .footnote-popup {
     margin-left: 1rem;
     margin-top: auto;
     margin-bottom: auto;
-    filter: var(--logo-filter);
+    /* filter: var(--logo-filter); */
 }
 
 /* Specific logo size adjustments */
